--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar">
         <div class="container navbar-flex">
             <h1>Where in the world?</h1>
-            <button class="btn-dark-mode">
+            <button class="btn-dark-mode" id="darktheme">
                 <i class="far fa-moon"></i> Dark Mode
             </button>
         </div>
@@ -66,6 +66,7 @@
     <!-------------------- SECTION ---------------------------->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="assets/js/darktheme.js"></script>
     <script src="assets/js/api.js"></script>
 </body>
 
